src/main/metadata/objects/Sales__c.object
<CustomObject>
    <description>Contact Porfolio: To record Sales record linked to each customer</description>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Salutation__c</fullName>
        <description>Customer Title from the sales contract
Attribute in Data Dictionary object Sales is &quot;Sales_CustomerTitle&quot;</description>
        <label>Customer Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Company_Name__c</fullName>
        <description>/*
Created by: Amy Liang
Used by: Sales 
Function: Company Name from the sales contract
Used in: Page Layouts,  Reports

Modify History
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_CompanyName&quot;</description>
        <inlineHelpText>Company Name from the sales contract</inlineHelpText>
        <label>Sales Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li
Used by: Tony Li 
Function: Retail Contact linked to the sales record 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_Contact&quot;</description>
        <label>Sales Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Personal Sales Record</relationshipLabel>
        <relationshipName>Sales_Person_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Contract_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: The start date for the sales contract
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_ContractDate&quot;</description>
        <inlineHelpText>The start date for the sales contract</inlineHelpText>
        <label>Sales Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Customer_Name__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Customer Name from the sales contract
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_CustomerName&quot;</description>
        <inlineHelpText>Customer Name from the sales contract</inlineHelpText>
        <label>Sales Customer Name</label>
        <length>152</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Sales dealer code in CRM 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_Dealer&quot;</description>
        <inlineHelpText>Sales dealer code in CRM</inlineHelpText>
        <label>Sales Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Sales Record</relationshipLabel>
        <relationshipName>Dealer_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Handover_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Date of the vehicle-handover to the customer
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_HandoverDate&quot;</description>
        <inlineHelpText>Date of the vehicle-handover to the customer</inlineHelpText>
        <label>Sales Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Home_Mobile_Phone__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Private Phone Number from the sales contract
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_HomeMobilePhone&quot;</description>
        <inlineHelpText>Private Phone Number from the sales contract</inlineHelpText>
        <label>Sales Home Mobile Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Date for invoice
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_InvoiceDate&quot;</description>
        <inlineHelpText>Date for invoice</inlineHelpText>
        <label>Sales Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Phone__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: Office Phone Number from the sales contract
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_OfficePhone&quot;</description>
        <inlineHelpText>Office Phone Number from the sales contract</inlineHelpText>
        <label>Sales Office Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Sales 
Function: The sales person involved in the contract
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_Person&quot;</description>
        <inlineHelpText>The sales person involved in the contract</inlineHelpText>
        <label>Sales Person</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Vehicle_CBU_CKD__c</fullName>
        <description>Vehicle manufacture type according to sales contract
Attribute in Data Dictionary object Sales is &quot;Sales_VehicleCBUCKD&quot;</description>
        <label>Sales Vehicle CBU/CKD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle linked to the sale in the system 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Sales is &quot;Sales_VehicleID&quot;</description>
        <label>Sales Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Vehicle_Model__c</fullName>
        <description>Vehicle model according to sales contract
Attribute in Data Dictionary object Sales is &quot;Sales_VehicleModel&quot;</description>
        <label>Sales Vehicle Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Vehicle_USvin__c</fullName>
        <description>Vehicle description according to sales contract
Attribute in Data Dictionary object Sales is &quot;Sales_VehicleUSvin&quot;</description>
        <label>Sales Vehicle USvin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>To flag whether the sales record is valid</description>
        <label>Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Description__c</fullName>
        <description>From Data Dictionary
Attribute in Data Dictionary object Sales is &quot;Sales_VehicleDesc&quot;</description>
        <label>Vehicle Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Order No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Sales_Order_No_Read_only</fullName>
        <active>true</active>
        <description>It&apos;s not allowed to change sales order number.</description>
        <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change sales order number.</errorMessage>
    </validationRules>
</CustomObject>